--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <div class="container mx-auto px-6">
             <div class="flex flex-col md:flex-row items-center gap-12 md:gap-20">
                 <div class="w-full md:w-1/2 reveal">
-                    <img src="image_d69a3e.jpg" alt="Craftsmanship Details" class="w-full h-[500px] object-cover shadow-2xl grayscale hover:grayscale-0 transition-all duration-700">
+                    <img src="https://i.meee.com.tw/jI70Hyp.jpg" alt="Craftsmanship Details" class="w-full h-[500px] object-cover shadow-2xl grayscale hover:grayscale-0 transition-all duration-700">
                 </div>
                 <div class="w-full md:w-1/2 reveal reveal-delay-200">
                     <h3 class="text-yellow-700 text-sm font-bold tracking-widest mb-2 uppercase">About Us</h3>
